# axumrustexample

./: .env  Cargo.toml  docker-compose.yaml
frontend/: Cargo.toml  Trunk.toml  index.css  index.html  tailwind.config.js
frontend/src/: main.rs
src/: lib.rs  main.rs  state.rs
src/handlers/: auth_handler.rs  mod.rs  oauth_handler.rs
src/models/: mod.rs
src/models/dtos/: auth.rs
src/models/entities/: user.rs
src/repositories/: user_repo.rs
src/services/: auth_service.rs
