[package]
name = "backend_rust_axum_2026"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }
dotenvy = "0.15"
async-trait = "0.1.89"
redis = "1.2.0"
sea-orm = { version = "1.1.20", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
oauth2 = "4.0.0"
tower-sessions = "0.15.0"
reqwest = { version = "0.13.2", features = ["json"] }
tower-http = { version = "0.6.8", features = ["cors"] }
